# NextJS-NextAuth-FastAPI-OAuth-Example

./: README.md
backend/: main.py  pyproject.toml
frontend/: .env.local.example  .gitignore  auth.tsx  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: auth-panel.tsx  backend-data.tsx  sign-in.tsx  sign-out.tsx  user.tsx
frontend/context/: NextAuthProvider.tsx
